# IAS_simulator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bes_ias  cmake_install.cmake
include/: iastype.h  io.h  macro.h  memory.h  translator.h  ual.h  uc.h
output/validation/: 2_pow_n.output  fact.output  sum_n.output
scripts/: execute_all_test.sh  execute_all_validation_script.sh
scripts/instruction_test/address_modify/: 20_stor_left_mx.ias  21_stor_right_mx.ias
scripts/instruction_test/arithmetic/: 12_add_mx.ias  13_add_abs_mx.ias  14_sub_mx.ias  15_sub_abs_mx.ias  16_mul_mx.ias  17_div_mx.ias  18_lsh.ias  19_rsh.ias
scripts/instruction_test/conditional_branch/: 10_jump+_left_mx.ias  11_jump+_right_mx.ias
scripts/instruction_test/data_transfert/: 1_load_mq.ias  2_load_mq_mx.ias  3_stor_mx.ias  4_load_mx.ias  5_load_min_mx.ias  6_load_abs_mx.ias  7_load_min_abs_mx.ias
scripts/instruction_test/unconditional_branch/: 8_jump_left_mx.ias  9_jump_right_mx.ias
scripts/validation/: 2_pow_n.ias  fact.ias  sum_n.ias
src/: io.c  main.c  memory.c  translator.c  ual.c  uc.c
